# hyperviser

./: .dockerignore  .gitignore  AURORA_DISTRO.md  AURORA_OS.md  BUILD.md  Cargo.toml  FINAL_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  rust-toolchain.toml
aurora-api/: Cargo.toml
aurora-api/src/: lib.rs
aurora-autotune/: Cargo.toml
aurora-autotune/src/: lib.rs
aurora-cli/: Cargo.toml
aurora-cli/src/: main.rs
aurora-core/: Cargo.toml
aurora-core/benches/: core_bench.rs
aurora-core/src/: device.rs  error.rs  graph.rs  kernel.rs  lib.rs  memory.rs  tensor.rs  types.rs
aurora-cpu/: Cargo.toml
aurora-cpu/benches/: cpu_kernels.rs
aurora-cpu/src/: lib.rs  numa.rs  scheduler.rs  simd.rs  thread_pool.rs
aurora-distro/: Cargo.toml  Dockerfile.remaster  docker-entrypoint.sh
aurora-distro/src/: main.rs
aurora-gpu/: Cargo.toml
aurora-gpu/src/: cuda.rs  lib.rs  opencl.rs  rocm.rs  vulkan.rs
aurora-linux/: Cargo.toml
aurora-linux/src/: lib.rs
aurora-memory/: Cargo.toml
aurora-memory/src/: lib.rs
aurora-orchestrator/: Cargo.toml
aurora-orchestrator/src/: lib.rs
aurora-profiler/: Cargo.toml
aurora-profiler/src/: benchmark.rs  cpu.rs  gpu.rs  lib.rs  memory.rs  profile.rs
aurora-tensor/: Cargo.toml
aurora-tensor/src/: lib.rs
install/: install.sh
kernel-module/: Makefile  aurora_compute.c
scripts/: aurora-tune.sh  ci-pipeline.sh  remaster-in-docker.sh  test-distro-in-docker.sh
