[package]
name = "aurora-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "AURORA command-line interface"

[[bin]]
name = "aurora"
path = "src/main.rs"

[dependencies]
aurora-core = { path = "../aurora-core" }
aurora-profiler = { path = "../aurora-profiler" }
aurora-cpu = { path = "../aurora-cpu" }
aurora-orchestrator = { path = "../aurora-orchestrator" }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Terminal
colored = "2.1"
indicatif = "0.17"
console = "0.15"
