[package]
name = "aurora-distro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Ubuntu remaster and installer tooling for AURORA OS"

[[bin]]
name = "aurora-distro"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
