[package]
name = "aurora-profiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Hardware profiling and detection for AURORA"

[dependencies]
aurora-core = { path = "../aurora-core" }

# System detection
raw-cpuid = { workspace = true }
sysinfo = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
