[package]
name = "aurora-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Tensor operations for AURORA"

[dependencies]
aurora-core = { path = "../aurora-core" }

# Math
matrixmultiply = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }
