[package]
name = "aurora-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Tensor operations for AURORA"

[dependencies]
aurora-core = { path = "../aurora-core" }
aurora-linux = { path = "../aurora-linux" }

# Math
matrixmultiply = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
wide = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }
